Add stylecop analyzers

--- a/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
+++ b/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
@@ -11,6 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
