--- a/WindowWatchApp.Common.Windows/WindowWatchApp.Common.Windows.csproj
+++ b/WindowWatchApp.Common.Windows/WindowWatchApp.Common.Windows.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WindowWatchApp.Common\WindowWatchApp.Common.csproj" />
   </ItemGroup>
 
