Add basic avalonia ui

--- a/WindowWatchApp.Avalonia/WindowWatchApp.Avalonia.csproj
+++ b/WindowWatchApp.Avalonia/WindowWatchApp.Avalonia.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.0-preview7" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="$(AvaloniaVersion)" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
@@ -22,5 +23,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WindowWatchApp.Common.Windows\WindowWatchApp.Common.Windows.csproj" />
+    <ProjectReference Include="..\WindowWatchApp.Common\WindowWatchApp.Common.csproj" />
   </ItemGroup>
 </Project>
