--- a/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
+++ b/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-rc1.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
