Add a basic app icon

--- a/WindowWatchApp.Avalonia/WindowWatchApp.Avalonia.csproj
+++ b/WindowWatchApp.Avalonia/WindowWatchApp.Avalonia.csproj
@@ -11,6 +11,11 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
 
+  
+  <ItemGroup>
+    <None Remove="Assets\logo.ico" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.0-rc1.1" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-rc1.1" />
