Add icons to buttons

--- a/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
+++ b/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="11.0.0-rc1.1" />
+    <PackageReference Include="Projektanker.Icons.Avalonia" Version="6.6.0-rc1.1" />
+    <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="6.6.0-rc1.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
