--- a/WindowWatchApp.Avalonia/WindowWatchApp.Avalonia.csproj
+++ b/WindowWatchApp.Avalonia/WindowWatchApp.Avalonia.csproj
@@ -23,6 +23,8 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-rc1.1" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-rc1.1" />
+    <PackageReference Include="Projektanker.Icons.Avalonia" Version="6.6.0-rc1.1" />
+    <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="6.6.0-rc1.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
