--- a/src/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
+++ b/src/WindowWatchApp.Avalonia.Desktop/WindowWatchApp.Avalonia.Desktop.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
